<resources>
    <string name="app_name">MyApp</string>
    <string name="title">Temperature Transfer</string>
    <string name="button1">Submit</string>
    <string name="button2">Cancel</string>
    <string name="show">Result:</string>
    <string name="notice">Please Input Fahrenheit</string>
    <string name="button3">+3 Scores</string>
    <string name="button4">+2 Scores</string>
    <string name="button5">+1 Score</string>
    <string name="button6">Reset</string>

</resources>