<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Team A"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="32dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button3"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button4"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button5"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Team B"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="32dp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button3"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button4"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#FFD700"
                    android:text="@string/button5"
                    android:textSize="18dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:background="#FFD700"
                android:text="Reset"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>
